--- a/app/views/manage/appeals/search/v2/decided.html
+++ b/app/views/manage/appeals/search/v2/decided.html
@@ -23,7 +23,7 @@
 
         <h3 class="govuk-heading-m govuk-!-margin-top-0">Search</h3>
         <div id="event-name-hint" class="govuk-hint">
-            You can search by appeal reference, planning application reference or first line of address
+            You can search by address or any reference number
         </div>
 
         <form class="govuk-form-group" style="display: flex; gap: 8px; align-items: center; margin-bottom: 0px;"
