--- a/app/views/manage/appeals/search/v2/active.html
+++ b/app/views/manage/appeals/search/v2/active.html
@@ -18,7 +18,7 @@
 
         <h3 class="govuk-heading-m govuk-!-margin-top-0">Search</h3>
         <div id="event-name-hint" class="govuk-hint">
-            You can search by appeal, planning application or enforcement notice reference, or address
+            You can search by address or any reference number
         </div>
 
         <form class="govuk-form-group" style="display: flex; gap: 8px; align-items: center; margin-bottom: 0px;"
@@ -34,6 +34,8 @@
 
         {# Size modifiers: xl, l, m #}
         <hr class="govuk-section-break govuk-section-break--m govuk-section-break">
+
+        {% include "./_includes/filters.html" %}
 
     </div>
     </div>
