--- a/app/views/manage/appeals/search/v2/wfr-search-applied.html
+++ b/app/views/manage/appeals/search/v2/wfr-search-applied.html
@@ -23,7 +23,7 @@
 
         <h3 class="govuk-heading-m govuk-!-margin-top-0">Search</h3>
         <div id="event-name-hint" class="govuk-hint">
-            You can search by appeal reference, planning application reference or first line of address
+            You can search by address or any reference number
         </div>
 
         <form class="govuk-form-group" style="display: flex; gap: 8px; align-items: center; margin-bottom: 0px;">
@@ -53,7 +53,7 @@
         {# Size modifiers: xl, l, m #}
         <hr class="govuk-section-break govuk-section-break--m govuk-section-break">
 
-        <h1 class="govuk-heading-l">Waiting for review</h1>
+        <h1 class="govuk-heading-l">With PINs</h1>
         <table class="govuk-table">
             <thead class="govuk-table__head">
                 <tr class="govuk-table__row">
