lpa dashboard updates

--- a/app/views/manage/appeals/search/filters-side/side.html
+++ b/app/views/manage/appeals/search/filters-side/side.html
@@ -593,7 +593,7 @@
     display: flex;
     align-items: center;
 ">
-    <a href="filter-applied" class="govuk-button govuk-button--secondary" style="margin:0;">
+    <a href="filter-applied.html" class="govuk-button govuk-button--secondary" style="margin:0;">
         Filters selected
     </a>
 </div>
