--- a/app/views/manage/appeals/search/v2/_includes/filters.html
+++ b/app/views/manage/appeals/search/v2/_includes/filters.html
@@ -93,7 +93,7 @@
         </details>
         <hr class="govuk-section-break govuk-section-break--s govuk-section-break--visible">
 
-        <details class="govuk-details govuk-!-margin-top-3 govuk-!-margin-padding-0 govuk-!-margin-bottom-0"
+       <!-- <details class="govuk-details govuk-!-margin-top-3 govuk-!-margin-padding-0 govuk-!-margin-bottom-0"
             id="filter-panel">
             <summary class="govuk-details__summary">
                 <h3 class="govuk-heading-s">Procedure type</h3>
@@ -136,7 +136,7 @@
                 </form>
             </div>
         </details>
-        <hr class="govuk-section-break govuk-section-break--s govuk-section-break--visible">
+        <hr class="govuk-section-break govuk-section-break--s govuk-section-break--visible">-->
 
 
         <details class="govuk-details govuk-!-margin-top-3 govuk-!-margin-padding-0 govuk-!-margin-bottom-0"
