Adding experiements link into the top level protoype index

--- a/app/views/index.html
+++ b/app/views/index.html
@@ -676,6 +676,19 @@
       <a href="https://appeals-prototype-archive.herokuapp.com/">View the archive</a>
     </p>
 
+     <hr class="govuk-section-break govuk-section-break--l govuk-section-break--visible">
+
+    <h2 class="govuk-heading-l">
+      Experiments
+    </h2>
+
+    <p class="govuk-body">
+      A collection of quick tests and internal tools.
+    </p>
+    <p class="govuk-body">
+      <a href="/experiments/">View experiments</a>
+    </p>
+
   </div>
 </div>
 {% endblock %}
