--- a/app/views/manage/appeals/search/filters-side/filter-applied.html
+++ b/app/views/manage/appeals/search/filters-side/filter-applied.html
@@ -444,6 +444,7 @@
                         </h2>
                         <div class="app-list__tag">
                             <strong class="govuk-tag govuk-tag--blue">Active</strong>
+                            <strong class="govuk-tag govuk-tag--grey">Lead</strong>
                           </div>
                       </div>
                       
@@ -461,10 +462,6 @@
                             <dd class="govuk-summary-list__value">Written representations</dd>
                           </div>
                           <div class="govuk-summary-list__row">
-                            <dt class="govuk-summary-list__key">Linked appeal</dt>
-                            <dd class="govuk-summary-list__value">Yes (lead)</dd>
-                          </div>
-                          <div class="govuk-summary-list__row">
                             <dt class="govuk-summary-list__key">Deadline</dt>
                             <dd class="govuk-summary-list__value">18 September 2025</dd>
                           </div>
@@ -473,7 +470,7 @@
                             <dd class="govuk-summary-list__value">Overdue</dd>
                           </div>
                           <div class="govuk-summary-list__row">
-                            <dt class="govuk-summary-list__key">To do</dt>
+                            <dt class="govuk-summary-list__key">Action</dt>
                             <li class="govuk-summary-list__actions-list-item" style="list-style: none; padding-left: 0; margin-left: 0; border-left: none;">
                                 <a class="govuk-link" href="#">Questionnaire<span class="govuk-visually-hidden"> </span></a>
                             </li>
