--- a/app/views/manage/appeals/search/filters-side/side.html
+++ b/app/views/manage/appeals/search/filters-side/side.html
@@ -311,13 +311,19 @@
                                                             <div class="govuk-checkboxes__item">
                                                                 <input class="govuk-checkboxes__input" id="type-1" name="type" type="checkbox" value="Planning permission">
                                                                 <label class="govuk-label govuk-checkboxes__label" for="type-1">
-                                                                    Yes
+                                                                    Questionnaire
                                                                 </label>
                                                             </div>
                                                             <div class="govuk-checkboxes__item">
                                                                 <input class="govuk-checkboxes__input" id="type-2" name="type" type="checkbox" value="Outline planning permission with some matters reserved">
                                                                 <label class="govuk-label govuk-checkboxes__label" for="type-2">
-                                                                    No
+                                                                    Statement
+                                                                </label>
+                                                            </div>
+                                                            <div class="govuk-checkboxes__item">
+                                                                <input class="govuk-checkboxes__input" id="type-2" name="type" type="checkbox" value="Outline planning permission with some matters reserved">
+                                                                <label class="govuk-label govuk-checkboxes__label" for="type-2">
+                                                                    None
                                                                 </label>
                                                             </div>
 
@@ -383,7 +389,8 @@
                                 </h2>
                                 <div class="app-list__tag">
                                     <strong class="govuk-tag govuk-tag--blue">Active</strong>
-                                  </div>
+                                    <strong class="govuk-tag govuk-tag--grey">Lead</strong>
+                                </div>
                               </div>
                               
                                 <dl class="govuk-summary-list govuk-summary-list--no-border govuk-summary-list--compact" >
@@ -400,10 +407,6 @@
                                     <dd class="govuk-summary-list__value">Written representations</dd>
                                   </div>
                                   <div class="govuk-summary-list__row">
-                                    <dt class="govuk-summary-list__key">Linked appeal</dt>
-                                    <dd class="govuk-summary-list__value">Yes (lead)</dd>
-                                  </div>
-                                  <div class="govuk-summary-list__row">
                                     <dt class="govuk-summary-list__key">Deadline</dt>
                                     <dd class="govuk-summary-list__value">18 September 2025</dd>
                                   </div>
@@ -412,7 +415,7 @@
                                     <dd class="govuk-summary-list__value">Overdue</dd>
                                   </div>
                                   <div class="govuk-summary-list__row">
-                                    <dt class="govuk-summary-list__key">To do</dt>
+                                    <dt class="govuk-summary-list__key">Action</dt>
                                     <li class="govuk-summary-list__actions-list-item" style="list-style: none; padding-left: 0; margin-left: 0; border-left: none;">
                                         <a class="govuk-link" href="#">Questionnaire<span class="govuk-visually-hidden"> </span></a>
                                     </li>
@@ -423,7 +426,10 @@
                                     <h2 class="govuk-heading-m govuk-!-margin-bottom-1">
                                       <a href="#" class="govuk-link">1345302</a>
                                     </h2>
-                                    <strong class="govuk-tag govuk-tag--yellow">With PINs</strong>
+                                    <div class="app-list__tag">
+                                        <strong class="govuk-tag govuk-tag--yellow">With case officer</strong>
+                                        <strong class="govuk-tag govuk-tag--grey">Child</strong>
+                                    </div>
                                   </div>
                                   
                                     <dl class="govuk-summary-list govuk-summary-list--no-border govuk-summary-list--compact" >
@@ -438,10 +444,6 @@
                                       <div class="govuk-summary-list__row">
                                         <dt class="govuk-summary-list__key">Procedure type</dt>
                                         <dd class="govuk-summary-list__value">Written representations</dd>
-                                      </div>
-                                      <div class="govuk-summary-list__row">
-                                        <dt class="govuk-summary-list__key">Linked appeal</dt>
-                                        <dd class="govuk-summary-list__value">Yes (child)</dd>
                                       </div>
                                     </dl>
 
@@ -464,10 +466,6 @@
                                           <div class="govuk-summary-list__row">
                                             <dt class="govuk-summary-list__key">Procedure type</dt>
                                             <dd class="govuk-summary-list__value">Hearing</dd>
-                                          </div>
-                                          <div class="govuk-summary-list__row">
-                                            <dt class="govuk-summary-list__key">Linked appeal</dt>
-                                            <dd class="govuk-summary-list__value">No</dd>
                                           </div>
                                           <div class="govuk-summary-list__row">
                                             <dt class="govuk-summary-list__key">Decision</dt>
@@ -500,10 +498,6 @@
                                         <dd class="govuk-summary-list__value">Inquiry</dd>
                                       </div>
                                       <div class="govuk-summary-list__row">
-                                        <dt class="govuk-summary-list__key">Linked appeal</dt>
-                                        <dd class="govuk-summary-list__value">No</dd>
-                                      </div>
-                                      <div class="govuk-summary-list__row">
                                         <dt class="govuk-summary-list__key">Withdrawn date</dt>
                                         <dd class="govuk-summary-list__value">18 September 2025</dd>
                                       </div>
@@ -528,10 +522,6 @@
                                           <div class="govuk-summary-list__row">
                                             <dt class="govuk-summary-list__key">Procedure type</dt>
                                             <dd class="govuk-summary-list__value">Written representations</dd>
-                                          </div>
-                                          <div class="govuk-summary-list__row">
-                                            <dt class="govuk-summary-list__key">Linked appeal</dt>
-                                            <dd class="govuk-summary-list__value">No</dd>
                                           </div>
                                           <div class="govuk-summary-list__row">
                                             <dt class="govuk-summary-list__key">Invalid date</dt>
