--- a/app/views/manage/appeals/search/v2/_includes/filters.html
+++ b/app/views/manage/appeals/search/v2/_includes/filters.html
@@ -155,14 +155,21 @@
                                             <input class="govuk-checkboxes__input" id="stage-accepted" name="stage"
                                                 type="checkbox" value="Accepted">
                                             <label class="govuk-label govuk-checkboxes__label" for="stage-accepted">
-                                                Yes
+                                                Questionnaire
                                             </label>
                                         </div>
                                         <div class="govuk-checkboxes__item">
                                             <input class="govuk-checkboxes__input" id="stage-consultation" name="stage"
                                                 type="checkbox" value="Consultation">
                                             <label class="govuk-label govuk-checkboxes__label" for="stage-consultation">
-                                                No
+                                                Statement
+                                            </label>
+                                        </div>
+                                        <div class="govuk-checkboxes__item">
+                                            <input class="govuk-checkboxes__input" id="stage-consultation" name="stage"
+                                                type="checkbox" value="Consultation">
+                                            <label class="govuk-label govuk-checkboxes__label" for="stage-consultation">
+                                                None
                                             </label>
                                         </div>
                                     </div>
