--- a/app/views/manage/appeals/search/v2/waiting-for-review.html
+++ b/app/views/manage/appeals/search/v2/waiting-for-review.html
@@ -55,7 +55,7 @@
             {# Size modifiers: xl, l, m #}
             <hr class="govuk-section-break govuk-section-break--m govuk-section-break">
 
-            <h1 class="govuk-heading-l">With PINs</h1><table class="govuk-table">
+            <h1 class="govuk-heading-l">With case officer</h1><table class="govuk-table">
                 <thead class="govuk-table__head">
                     <tr class="govuk-table__row">
                         <th scope="col" class="govuk-table__header">Appeal number</th>
