--- a/app/views/manage/appeals/search/v2/_includes/secondary-nav-with-search.html
+++ b/app/views/manage/appeals/search/v2/_includes/secondary-nav-with-search.html
@@ -5,7 +5,7 @@
       href: "active-search-applied",
       current: currentPage == "active-search-applied"
     }, {
-      text: "With PINs (0)",
+      text: "With case officer (0)",
       href: "wfr-search-applied",
       current: currentPage == "wfr-search-applied"
     }, {
