--- a/app/views/manage/appeals/search/v2/_includes/secondary-nav.html
+++ b/app/views/manage/appeals/search/v2/_includes/secondary-nav.html
@@ -5,7 +5,7 @@
       href: "active",
       current: currentPage == "active"
     }, {
-      text: "With PINs (8)",
+      text: "With case officer (8)",
       href: "waiting-for-review",
       current: currentPage == "waiting-for-review"
     }, {
