--- a/app/views/manage/appeals/search/v2/active-filterv2.html
+++ b/app/views/manage/appeals/search/v2/active-filterv2.html
@@ -35,14 +35,16 @@
         {# Size modifiers: xl, l, m #}
         <hr class="govuk-section-break govuk-section-break--m govuk-section-break">
 
-        {% include "./_includes/filters.html" %}
-
     </div>
-    </div>
+</div>
 
-    <div class="govuk-grid-row">
 
-        <div class="govuk-grid-column-full">
+
+<div class="govuk-grid-row">
+
+    <div class="govuk-grid-column-full">
+        {% include "./_includes/filters-v2.html" %}
+
 
             {% include "./_includes/secondary-nav.html" %}
 
