--- a/app/views/manage/appeals/search/v2/active-search-applied.html
+++ b/app/views/manage/appeals/search/v2/active-search-applied.html
@@ -69,7 +69,7 @@
                             </a>
                         </th>
                         <td class="govuk-table__cell">The Old Watchtower, Cliffside Road, Marlowe Point, Hampshire, CB23 7UA</td>
-                        <td class="govuk-table__cell">Full lanning</td>
+                        <td class="govuk-table__cell">Planning</td>
                         <td class="govuk-table__cell">29 September 2025</td>
                         <td class="govuk-table__cell">1 day</td>
                           <td class="govuk-table__cell"><a href="#">Questionnaire</a></td>
