--- a/app/views/manage/appeals/search/v2/invalid-search-applied.html
+++ b/app/views/manage/appeals/search/v2/invalid-search-applied.html
@@ -62,8 +62,8 @@
                     <tr class="govuk-table__row">
                         <th scope="col" class="govuk-table__header">Appeal number</th>
                         <th scope="col" class="govuk-table__header">Address</th>
-                        <th scope="col" class="govuk-table__header">Withdrawn date</th>
                         <th scope="col" class="govuk-table__header">Appeal type</th>
+                        <th scope="col" class="govuk-table__header">Invalid date</th>
                     </tr>
                 </thead>
                 <tbody class="govuk-table__body">
