Outline of updating access email for the owner of an appeal

--- a/app/views/_includes/appellant/meta-full-appeal.html
+++ b/app/views/_includes/appellant/meta-full-appeal.html
@@ -76,7 +76,7 @@
     </dt>
     <dd class="govuk-summary-list__value">
       <p class="govuk-body">
-        mariellabidbod@email.com <a class="govuk-link" href="new-email">Change<span class="govuk-visually-hidden"> email</span></a>
+        {{ data['new-email'] or 'mariellabidbod@email.com' }} <a class="govuk-link" href="new-email">Change<span class="govuk-visually-hidden"> email</span></a>
       </p>
     </dd>
 
