--- a/app/views/appeal/appeals/v3/new-email.html
+++ b/app/views/appeal/appeals/v3/new-email.html
@@ -1,6 +1,6 @@
 {% extends '_layouts/layout-main.html' %}
 
-{% set title = "New email" %}
+{% set title = "Updated email" %}
 
 {% block pageTitle %}
   {{ title }} - {{serviceName}} - GOV.UK
