--- a/app/views/appeal/appeals/v3/appellant-submission-full.html
+++ b/app/views/appeal/appeals/v3/appellant-submission-full.html
@@ -14,6 +14,14 @@
 
 {% block content %}
 <div class="govuk-grid-row">
+  <div class="govuk-grid-column-two-thirds">
+
+    {{ govukNotificationBanner({
+      type: "success",
+      text: flash
+    }) if flash.length }}
+
+  </div>
   <div class="govuk-grid-column-full">
 
     <span class="govuk-caption-xl">
@@ -24,7 +32,7 @@
     </h1>
 
     {% include "_includes/appellant/meta-full-appeal.html" %}
-    
+
     <hr class="govuk-section-break govuk-section-break--visible govuk-section-break--l">
 
     <h2 class="govuk-heading-l">
