--- a/app/views/manage/appeals/search/v2/_includes/filters-v2.html
+++ b/app/views/manage/appeals/search/v2/_includes/filters-v2.html
@@ -140,9 +140,11 @@
 
           </div>
 
-          <button class="govuk-button govuk-!-margin-top-4" type="submit">
-            Apply filters
-          </button>
+          {{ govukButton({
+            text: "Apply filters",
+            href: "active-filter-applied",
+            classes: "govuk-button govuk-!-margin-top-4"
+          }) }}
 
         </div>
       </form>
