--- a/app/views/manage/appeals/search/v2/_includes/filters.html
+++ b/app/views/manage/appeals/search/v2/_includes/filters.html
@@ -73,7 +73,7 @@
                                             <input class="govuk-checkboxes__input" id="type-1" name="type"
                                                 type="checkbox" value="Planning permission">
                                             <label class="govuk-label govuk-checkboxes__label" for="type-1">
-                                                Adevertisement
+                                                Advertisement
                                             </label>
                                         </div>
                                         <div class="govuk-checkboxes__item">
@@ -184,7 +184,7 @@
         </details>
         <hr class="govuk-section-break govuk-section-break--s govuk-section-break--visible">
 
-        <button class="govuk-button govuk-!-margin-top-4 govuk-!-margin-bottom-0" type="submit">
+        <button class="govuk-button govuk-!-margin-top-4 govuk-!-margin-bottom-0" style="margin-bottom:0px;" type="submit">
             Apply
         </button>
     </div>
