--- a/app/views/manage/appeals/search/index.html
+++ b/app/views/manage/appeals/search/index.html
@@ -13,8 +13,8 @@
       <h2 class="govuk-heading-m">
         Version 2 (latest)
         {{govukTag({
-            text: "In progress",
-            classes: "govuk-!-margin-left-2 govuk-tag--blue"
+            text: "Ready for user research",
+            classes: "govuk-!-margin-left-2 govuk-tag--light-blue"
         })}}
       </h2>
   
@@ -36,9 +36,6 @@
          Updated hint text to remove postcode and add first line of address
         </li>
       </ul>
-
-      <p class="govuk-body">Changes from Version 1 have not yet been agreed. These designs have been iterated to support technical discussions.</p>
-
 
 {{ govukAccordion({
     id: "",
