--- a/app/views/manage/appeals/search/index.html
+++ b/app/views/manage/appeals/search/index.html
@@ -35,6 +35,9 @@
         <li>
          Updated hint text to remove postcode and add first line of address
         </li>
+        <li>
+         Added filters (appeal type and action required)
+        </li>
       </ul>
 
 {{ govukAccordion({
